# pickup-ui

./: .env.example  .gitignore  .htpasswd  Dockerfile  README.md  default.conf.template  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
helm/pickup-ui/: Chart.yaml  README.md
helm/pickup-ui/templates/: _helpers.tpl  config-environment.yaml  deployment.yaml  ingress.yaml  pod-autoscaler.yaml  service.yaml
src/: app.d.ts  app.html  app.postcss
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: NumberParser.test.ts  NumberParser.ts  index.ts  jwt.ts  util.test.ts  util.ts
src/lib/components/: AutoComplete.svelte  Dropdown.svelte  Header.svelte  Map.svelte  Modal.svelte  Popup.svelte
src/lib/components/icons/: Google.svelte
src/lib/i18n/: i18n-types.ts
src/lib/i18n/en/: index.ts
src/lib/openapi/: index.ts
src/lib/openapi/pickup/: runtime.ts
src/lib/openapi/pickup/.openapi-generator/: FILES
src/lib/openapi/pickup/apis/: AppApi.ts  Oauth2Api.ts  PlaceApi.ts  UserApi.ts  index.ts
src/lib/openapi/pickup/models/: CompleteUser.ts  ErrorMessage.ts  Health.ts  ModelError.ts  Place.ts  (+5 more)
src/lib/stores/: currentUser.ts  locale.ts  location.ts  notifications.ts  now.ts  size.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts
src/routes/(authed)/: +layout.ts
src/routes/(authed)/(verified)/: +layout.ts
src/routes/(authed)/complete/: +page.svelte
src/routes/(unauthed)/: +page.svelte
src/routes/(unauthed)/(redirect)/: +layout.ts
static/: manifest.json
tests/: test.ts
(+5 files in other folders)
